--- a/web-335/watson-diagrams.html
+++ b/web-335/watson-diagrams.html
@@ -27,9 +27,9 @@
           <div class="carousel-item active">
             <div class="carousel-caption">
               <a href="https://github.com/watsonm19/web-335/blob/main/week-1/watson-a1.4-ord.png" target="_blank">
-                <h3>Object Relational Diagram</h3>
+                <h3>Object Relational Diagram 1 (ORD)</h3>
                 <div class="img-container m-2">
-                  <img src="../nosql-data-diagrams/watson-a1.4-ord.png" alt="ORD">
+                  <img src="../nosql-data-diagrams/watson-a1.4-ord.png" alt="ORD 1">
                   <div class="overlay">
                     <span>UMLet</span>
                   </div>
@@ -41,9 +41,37 @@
           <div class="carousel-item">
             <div class="carousel-caption">
               <a href="https://github.com/watsonm19/web-335/blob/main/week-1/watson-a1.4-nosql-data-structure.png" target="_blank">
-                <h3>NoSQL Data Structure</h3>
+                <h3>NoSQL Data Structure 1</h3>
                 <div class="img-container m-2">
-                  <img src="../nosql-data-diagrams/watson-a1.4-nosql-data-structure.png" alt="JavaScript Image from https://codeburst.io/">
+                  <img src="../nosql-data-diagrams/watson-a1.4-nosql-data-structure.png" alt="JSON Data Structure 1">
+                  <div class="overlay">
+                    <span>JSON</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 2.2 - ORD -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-2/watson-a2.2-shopper-ord.png" target="_blank">
+                <h3>ORD 2</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a2.2-shopper-ord.png" alt="ORD 2">
+                  <div class="overlay">
+                    <span>UMLet</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 2.2 - NoSQL Data Structure -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-2/watson-a2.2-shopper-data.json" target="_blank">
+                <h3>NoSQL Data Structure 2</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a2.2-shopper-data-structure.png" alt="JSON Data Structure 2">
                   <div class="overlay">
                     <span>JSON</span>
                   </div>
