edit data structure 2 image size

--- a/web-335/watson-diagrams.html
+++ b/web-335/watson-diagrams.html
@@ -71,7 +71,7 @@
               <a href="https://github.com/watsonm19/web-335/blob/main/week-2/watson-a2.2-shopper-data.json" target="_blank">
                 <h3>NoSQL Data Structure 2</h3>
                 <div class="img-container m-2">
-                  <img src="../nosql-data-diagrams/watson-a2.2-shopper-data-structure.png" alt="JSON Data Structure 2">
+                  <img src="../nosql-data-diagrams/watson-a2.2-shopper-data-structure.png" alt="JSON Data Structure 2" style="width: 200px">
                   <div class="overlay">
                     <span>JSON</span>
                   </div>
