--- a/web-335/watson-diagrams.html
+++ b/web-335/watson-diagrams.html
@@ -43,7 +43,7 @@
               <a href="https://github.com/watsonm19/web-335/blob/main/week-1/watson-a1.4-nosql-data-structure.png" target="_blank">
                 <h3>NoSQL Data Structure 1</h3>
                 <div class="img-container m-2">
-                  <img src="../nosql-data-diagrams/watson-a1.4-nosql-data-structure.png" alt="JSON Data Structure 1">
+                  <img src="../nosql-data-diagrams/watson-a1.4-nosql-data-structure.png" alt="JSON Data Structure 1" style="width: 250px">
                   <div class="overlay">
                     <span>JSON</span>
                   </div>
@@ -71,7 +71,35 @@
               <a href="https://github.com/watsonm19/web-335/blob/main/week-2/watson-a2.2-shopper-data.json" target="_blank">
                 <h3>NoSQL Data Structure 2</h3>
                 <div class="img-container m-2">
-                  <img src="../nosql-data-diagrams/watson-a2.2-shopper-data-structure.png" alt="JSON Data Structure 2" style="width: 200px">
+                  <img src="../nosql-data-diagrams/watson-a2.2-shopper-data-structure.png" alt="JSON Data Structure 2" style="width: 250px">
+                  <div class="overlay">
+                    <span>JSON</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 2.3 - ORD -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-2/watson-a2.3-tech-ord.png" target="_blank">
+                <h3>ORD 3</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a2.3-tech-ord.png" alt="ORD 3">
+                  <div class="overlay">
+                    <span>UMLet</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 2.3 - NoSQL Data Structure -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-2/watson-a2.3-tech-data.json" target="_blank">
+                <h3>NoSQL Data Structure 3</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a2.3-tech-data-structure.png" alt="JSON Data Structure 3" style="width: 250px">
                   <div class="overlay">
                     <span>JSON</span>
                   </div>
