--- a/index.html
+++ b/index.html
@@ -253,7 +253,10 @@
           <div class="carousel-caption">
             <h3>Presentations</h3>
             <br>
-            <a href="/web-420/watson-rest.html">Representational State Transfer (REST)</a>
+            <ul class="list-style-none">
+              <li><a href="/web-420/watson-rest.html">Representational State Transfer (REST)</a></li>
+              <li><a href="/web-420/watson-restful-apis.html">RESTful APIs</a></li>
+            </ul>
             <br><br>
             <p>Presentations from WEB 420: RESTful APIs</p>
           </div>
