add assignment 3.2 & 3.3 to diagrams html

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
             <p>Presentations from WEB 420: RESTful APIs</p>
           </div>
         </div>
+      <!-- end carousal -->
       </div>
       <!-- Carousal Controls -->
       <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
