--- a/web-335/watson-diagrams.html
+++ b/web-335/watson-diagrams.html
@@ -107,6 +107,77 @@
               </a>
             </div>
           </div>
+          <!-- Assignment 3.2 - ORD -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-3/watson-a3.2-security-ord.png" target="_blank">
+                <h3>ORD 4</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a3.2-security-ord.png" alt="ORD 4">
+                  <div class="overlay">
+                    <span>UMLet</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 3.2 - NoSQL Data Structure -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-3/watson-a3.2-security-data.json" target="_blank">
+                <h3>NoSQL Data Structure 4</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a3.2-security-data-structure.png" alt="JSON Data Structure 4" style="width: 250px">
+                  <div class="overlay">
+                    <span>JSON</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 3.3 - ORD -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-3/watson-a3.3-bookco-ord.png" target="_blank">
+                <h3>ORD 5</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a3.3-bookco-ord.png" alt="ORD 5">
+                  <div class="overlay">
+                    <span>UMLet</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 3.3 - Document Diagram -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-3/watson-a3.3-bookco-doc-diagram.png" target="_blank">
+                <h3>Document Diagram 5</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a3.3-bookco-doc-diagram.png" alt="Document Diagram 5">
+                  <div class="overlay">
+                    <span>UMLet</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Assignment 3.3 - NoSQL Data Structure -->
+          <div class="carousel-item">
+            <div class="carousel-caption">
+              <a href="https://github.com/watsonm19/web-335/blob/main/week-3/watson-a3.3-bookco-data.json" target="_blank">
+                <h3>NoSQL Data Structure 5</h3>
+                <div class="img-container m-2">
+                  <img src="../nosql-data-diagrams/watson-a3.3-bookco-data-structure.png" alt="JSON Data Structure 5" style="width: 250px">
+                  <div class="overlay">
+                    <span>JSON</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        <!-- end carousal -->
         </div>
         <!-- Carousal Controls -->
         <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
