--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
             <ul class="list-style-none">
               <li><a href="/web-420/watson-rest.html">Representational State Transfer (REST)</a></li>
               <li><a href="/web-420/watson-restful-apis.html">RESTful APIs</a></li>
+              <li><a href="/web-420/watson-soap.html">Simple Object Access Protocol (SOAP)</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 420: RESTful APIs</p>
