add presentation 3.3 - soap

--- a/web-420/watson-restful-apis.html
+++ b/web-420/watson-restful-apis.html
@@ -18,7 +18,7 @@
     <h2>WEB 420</h2>
   </div>
 
-    <!-- Diagrams -->
+    <!-- Presentation -->
     <section class="presentations mt-5">
       <h2 class="text-center pt-5">RESTful APIs PRESENTATION</h2>
 
