add presentation 4.2 - json apis

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
               <li><a href="/web-420/watson-rest.html">Representational State Transfer (REST)</a></li>
               <li><a href="/web-420/watson-restful-apis.html">RESTful APIs</a></li>
               <li><a href="/web-420/watson-soap.html">Simple Object Access Protocol (SOAP)</a></li>
+              <li><a href="/web-420/watson-json-apis.html">JSON APIs</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 420: RESTful APIs</p>
