--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
               <li><a href="/web-420/watson-json-apis.html">JSON APIs</a></li>
               <li><a href="/web-420/watson-hypermedia-design.html">Hypermedia Design</a></li>
               <li><a href="/web-420/watson-soa-esb.html">Service-Oriented Architecture (SOA) & Enterprise Service Bus (ESB)</a></li>
+              <li><a href="/web-420/watson-microservices.html">Microservices</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 420: RESTful APIs</p>
