add api gateway to projects section

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <a href="https://watson-ems-app.herokuapp.com/" target="_blank">
               <h3>Employee Management System</h3>
               <div class="img-container m-2">
-                <img src="imgs/ems-app.png" alt="Gryffindor JavaScript Quiz image">
+                <img src="imgs/ems-app.png" alt="EMS home page image">
                 <div class="overlay">
                   <span>HTML, CSS, JavaScript, Bootstrap, Node.js, Express, MongoDB, other NPM dependencies, deployed on Heroku</span>
                 </div>
@@ -264,6 +264,22 @@
             </ul>
             <br><br>
             <p>Presentations from WEB 420: RESTful APIs</p>
+          </div>
+        </div>
+        <!-- API Gateway -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://watson-api-gateway.herokuapp.com/" target="_blank">
+              <h3>API Gateway</h3>
+              <div class="img-container m-2">
+                <img src="imgs/api-gateway-app.png" alt="API Gateway home page image">
+                <div class="overlay">
+                  <span>Node.js, Express, MongoDB, other NPM dependencies, API Routing, SOAP UI Testing, Microservices, deployed on Heroku</span>
+                </div>
+              </div>
+            </a>
+            <p>An API Gateway system with basic routing. Created in WEB 420 at Bellevue University.</p>
+            <a href="https://github.com/watsonm19/web-420/tree/main/api-gateway" target="_blank">API Gateway GitHub Repository</a>
           </div>
         </div>
       <!-- end carousal -->
