add presentation 1.2 - technology value stream

--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
             <p>Diagrams from WEB 335: Introduction to NoSQL</p>
           </div>
         </div>
-        <!-- Presentations -->
+        <!-- RESTful APIs Presentations -->
         <div id="presentations" class="carousel-item">
           <div class="carousel-caption">
-            <h3>Presentations</h3>
+            <h3>RESTful APIs Presentations</h3>
             <br>
             <ul class="list-style-none">
               <li><a href="/web-420/watson-rest.html">Representational State Transfer (REST)</a></li>
@@ -281,6 +281,18 @@
             </a>
             <p>An API Gateway system with basic routing. Created in WEB 420 at Bellevue University.</p>
             <a href="https://github.com/watsonm19/web-420/tree/main/api-gateway" target="_blank">API Gateway GitHub Repository</a>
+          </div>
+        </div>
+        <!-- DevOps Presentations -->
+        <div id="presentations" class="carousel-item">
+          <div class="carousel-caption">
+            <h3>DevOps Presentations</h3>
+            <br>
+            <ul class="list-style-none">
+              <li><a href="/web-430/watson-tech-value-stream.html">The Technology Value Stream</a></li>
+            </ul>
+            <br><br>
+            <p>Presentations from WEB 430: DevOps</p>
           </div>
         </div>
       <!-- end carousal -->
