add presentation 2.2 - two-pizza team rule

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
             <br>
             <ul class="list-style-none">
               <li><a href="/web-430/watson-tech-value-stream.html">The Technology Value Stream</a></li>
+              <li><a href="/web-430/watson-two-pizza-rule.html">The Two-Pizza Team Rule</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 430: DevOps</p>
