--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
             <ul class="list-style-none">
               <li><a href="/web-430/watson-tech-value-stream.html">The Technology Value Stream</a></li>
               <li><a href="/web-430/watson-two-pizza-rule.html">The Two-Pizza Team Rule</a></li>
+              <li><a href="/web-430/watson-automated-tests.html">Automated Testing</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 430: DevOps</p>
