--- a/index.html
+++ b/index.html
@@ -297,6 +297,22 @@
             <p>Presentations from WEB 430: DevOps</p>
           </div>
         </div>
+        <!-- Enterprise ComposerApp -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://watsonm19.github.io/enterprise-composer-app" target="_blank">
+              <h3>ComposerApp</h3>
+              <div class="img-container m-2">
+                <img src="imgs/composer-app.png" alt="ComposerApp home page image">
+                <div class="overlay">
+                  <span>Angular, TypeScript, HTML, CSS, Bootstrap, deployed using ghpages</span>
+                </div>
+              </div>
+            </a>
+            <p>A simple Angular app that uses dependency injection and observables.</p>
+            <a href="https://github.com/watsonm19/enterprise-composer-app" target="_blank">ComposerApp GitHub Repository</a>
+          </div>
+        </div>
       <!-- end carousal -->
       </div>
       <!-- Carousal Controls -->
