--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
               <li><a href="/web-430/watson-two-pizza-rule.html">The Two-Pizza Team Rule</a></li>
               <li><a href="/web-430/watson-automated-tests.html">Automated Testing</a></li>
               <li><a href="/web-430/watson-continuous-integration.html">Continuous Integration (CI)</a></li>
+              <li><a href="/web-430/watson-pager-rotation-duties.html">Pager Rotation Duties</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 430: DevOps</p>
