--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
               <li><a href="/web-430/watson-automated-tests.html">Automated Testing</a></li>
               <li><a href="/web-430/watson-continuous-integration.html">Continuous Integration (CI)</a></li>
               <li><a href="/web-430/watson-pager-rotation-duties.html">Pager Rotation Duties</a></li>
+              <li><a href="/web-430/watson-ca-processes.html">The Dangers of Change Approval Processes</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 430: DevOps</p>
