--- a/index.html
+++ b/index.html
@@ -316,6 +316,25 @@
             <a href="https://github.com/watsonm19/enterprise-composer-app" target="_blank">ComposerApp GitHub Repository</a>
           </div>
         </div>
+        <!-- Enterprise GPA Calculator App -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://watsonm19.github.io/gpa-calculator-app" target="_blank">
+              <h3>GPA Calculator App</h3>
+              <div class="img-container m-2">
+                <img src="imgs/gpa-calculator-app.png" alt="GPA Calculator App main page image">
+                <div class="overlay">
+                  <span>Angular, TypeScript, HTML, CSS, Angular Material, deployed using ghpages</span>
+                </div>
+              </div>
+            </a>
+            <p>
+              A simple Angular app that uses sign-in** validation and calculates GPA of inputted grades.<br />
+              <span class="text-danger">**Use Student ID: 1008, 1009, 1010, 1011, or 1012 to sign-in.</span>
+            </p>
+            <a href="https://github.com/watsonm19/gpa-calculator-app" target="_blank">GPA Calculator App GitHub Repository</a>
+          </div>
+        </div>
       <!-- end carousal -->
       </div>
       <!-- Carousal Controls -->
