--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </a>
             <p>
               A simple Angular app that uses sign-in** validation and calculates GPA of inputted grades.<br />
-              <span class="text-danger">**Use Student ID: 1008, 1009, 1010, 1011, or 1012 to sign-in.</span>
+              **<span class="text-danger">Use Student ID: 1008, 1009, 1010, 1011, or 1012 to sign-in.</span>
             </p>
             <a href="https://github.com/watsonm19/gpa-calculator-app" target="_blank">GPA Calculator App GitHub Repository</a>
           </div>
