add tech vs business presentation 7.2

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
               <li><a href="/web-430/watson-continuous-integration.html">Continuous Integration (CI)</a></li>
               <li><a href="/web-430/watson-pager-rotation-duties.html">Pager Rotation Duties</a></li>
               <li><a href="/web-430/watson-ca-processes.html">The Dangers of Change Approval Processes</a></li>
+              <li><a href="/web-430/watson-it-vs-business.html">Technology vs Business</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 430: DevOps</p>
