add in-n-out-books app

--- a/index.html
+++ b/index.html
@@ -331,9 +331,27 @@
             </a>
             <p>
               A simple Angular app that uses sign-in** validation and calculates GPA of inputted grades.<br />
-              **<span class="text-danger">Use Student ID: 1008, 1009, 1010, 1011, or 1012 to sign-in.</span>
+              **IMPORTANT: <span class="text-danger">use Student ID - 1008, 1009, 1010, 1011, or 1012 to sign-in.</span>
             </p>
             <a href="https://github.com/watsonm19/gpa-calculator-app" target="_blank">GPA Calculator App GitHub Repository</a>
+          </div>
+        </div>
+        <!-- Enterprise In-N-Out-Books App -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://watsonm19.github.io/in-n-out-books" target="_blank">
+              <h3>In-N-Out-Books App</h3>
+              <div class="img-container m-2">
+                <img src="imgs/in-n-out-books.png" alt="In-N-Out-Books App main page image">
+                <div class="overlay">
+                  <span>Angular, TypeScript, HTML, CSS, Angular Material, deployed using ghpages</span>
+                </div>
+              </div>
+            </a>
+            <p>
+              A simple Angular app that uses the Open Library API to retrieve book data.
+            </p>
+            <a href="https://github.com/watsonm19/in-n-out-books" target="_blank">In-N-Out-Books App GitHub Repository</a>
           </div>
         </div>
       <!-- end carousal -->
