--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
               <li><a href="/web-430/watson-pager-rotation-duties.html">Pager Rotation Duties</a></li>
               <li><a href="/web-430/watson-ca-processes.html">The Dangers of Change Approval Processes</a></li>
               <li><a href="/web-430/watson-it-vs-business.html">Technology vs Business</a></li>
+              <li><a href="/web-430/watson-it-vs-business.html">Security Controls in Shared Source Code Repositories</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 430: DevOps</p>
