--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
               <li><a href="/web-430/watson-ca-processes.html">The Dangers of Change Approval Processes</a></li>
               <li><a href="/web-430/watson-it-vs-business.html">Technology vs Business</a></li>
               <li><a href="/web-430/watson-source-control-security.html">Security Controls in Shared Source Code Repositories</a></li>
+              <li><a href="/web-430/watson-change-management.html">Change Management</a></li>
             </ul>
             <br><br>
             <p>Presentations from WEB 430: DevOps</p>
