--- a/index.html
+++ b/index.html
@@ -356,6 +356,24 @@
             <a href="https://github.com/watsonm19/in-n-out-books" target="_blank">In-N-Out-Books App GitHub Repository</a>
           </div>
         </div>
+        <!-- Bob's Computer Repair Shop Web App -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://watsonm19.github.io/bobs-computer-repair-shop" target="_blank">
+              <h3>Bob's Computer Repair Shop Web App</h3>
+              <div class="img-container m-2">
+                <img src="imgs/bobs-computer-repair-shop.png" alt="Bob's Computer Repair Shop Web App main page image">
+                <div class="overlay">
+                  <span>Angular, TypeScript, HTML, CSS, Angular Material, deployed using ghpages</span>
+                </div>
+              </div>
+            </a>
+            <p>
+              A simple Angular app that uses the Open Library API to retrieve book data.
+            </p>
+            <a href="https://github.com/watsonm19/bobs-computer-repair-shop" target="_blank">Bob's Computer Repair Shop Web App Repository</a>
+          </div>
+        </div>
       <!-- end carousal -->
       </div>
       <!-- Carousal Controls -->
