--- a/index.html
+++ b/index.html
@@ -359,19 +359,20 @@
         <!-- Bob's Computer Repair Shop Web App -->
         <div class="carousel-item">
           <div class="carousel-caption">
-            <a href="https://watsonm19.github.io/bobs-computer-repair-shop" target="_blank">
+            <a href="https://hufflepuff-bcrs.herokuapp.com/#/" target="_blank">
               <h3>Bob's Computer Repair Shop Web App</h3>
               <div class="img-container m-2">
-                <img src="imgs/bobs-computer-repair-shop.png" alt="Bob's Computer Repair Shop Web App main page image">
+                <img src="imgs/bcrs-img.png" alt="Bob's Computer Repair Shop web app - Service Repair page image">
                 <div class="overlay">
-                  <span>Angular, TypeScript, HTML, CSS, Angular Material, deployed using ghpages</span>
+                  <span>MEAN Stack, HTML, CSS, JavaScript, Angular Material, deployed on Heroku</span>
                 </div>
               </div>
             </a>
             <p>
-              A simple Angular app that uses the Open Library API to retrieve book data.
+              A MEAN Stack production-level web application that creates and stores users, invoices, security questions, and roles.<br />
+              **IMPORTANT: use the following credential to login or register your own!<span class="text-danger">username: test77, password: password77</span>
             </p>
-            <a href="https://github.com/watsonm19/bobs-computer-repair-shop" target="_blank">Bob's Computer Repair Shop Web App Repository</a>
+            <a href="https://github.com/adamluna/BobsComputerRepair" target="_blank">BCRS Repository</a>
           </div>
         </div>
       <!-- end carousal -->
