fix BCRS description

--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
               </div>
             </a>
             <p>
-              A MEAN Stack production-level web application that creates and stores users, invoices, security questions, and roles.<br />
-              **IMPORTANT: use the following credential to login or register your own!<span class="text-danger">username: test77, password: password77</span>
+              A MEAN Stack production-level web application that creates and stores users, invoices, security questions, and roles with a Hufflepuff theme.<br />
+              **IMPORTANT: use the following credential to login or register your own! <span class="text-danger">Username: test77, Password: password77</span>
             </p>
             <a href="https://github.com/adamluna/BobsComputerRepair" target="_blank">BCRS Repository</a>
           </div>
