--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <p class="card-text">Portland, OR</p>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Graduated: Spring 2019</li>
+              <li class="list-group-item">Graduated: March 2019</li>
               <li class="list-group-item">Associate of Science</li>
             </ul>
           </div>
@@ -91,8 +91,8 @@
               <p class="card-text">Bellevue, NE</p>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">2020 - Present</li>
-              <li class="list-group-item">B.S. Web Development</li>
+              <li class="list-group-item">Graduated: January 2022</li>
+              <li class="list-group-item">Bachelor of Science<br />Web Development</li>
             </ul>
           </div>
         </div>
