--- a/index.html
+++ b/index.html
@@ -74,25 +74,25 @@
         <div id="education" class="col">
           <h3 class="text-center">education</h3>
           <br>
-          <div class="card" style="width: 20rem;">
+          <div class="card card-dark" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Portland Community College</h5>
               <p class="card-text">Portland, OR</p>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Graduated: March 2019</li>
-              <li class="list-group-item">Associate of Science</li>
+              <li class="list-group-item card-dark">Graduated: March 2019</li>
+              <li class="list-group-item card-dark">Associate of Science</li>
             </ul>
           </div>
           <br>
-          <div class="card" style="width: 20rem;">
+          <div class="card card-dark" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Bellevue University</h5>
               <p class="card-text">Bellevue, NE</p>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Graduated: January 2022</li>
-              <li class="list-group-item">Bachelor of Science<br />Web Development</li>
+              <li class="list-group-item card-dark">Graduated: January 2022</li>
+              <li class="list-group-item card-dark">Bachelor of Science<br />Web Development</li>
             </ul>
           </div>
         </div>
