--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Mark Watson">
-  <meta name="keywords" content="Mark, Watson, portfolio, web, developer, software, engineer, javascript">
+  <meta name="keywords" content="Mark, Watson, portfolio, web, developer, software, engineer, javascript, angular, react, nodejs, express, typescript">
   <meta name="description" content="Mark Watson, Jr. | Web Portfolio 2021 | Project Showcase">
   <title>MW | Developer Portfolio</title>
   <!-- Stylesheets / Bootstrap 4 / Imported Font -->
@@ -66,7 +66,7 @@
             <h5>"I want to make things that make an impact."</h5>
             <p>When I first started my coding journey, there was an instance where I got to print and see my very first "output" on my own laptop screen and from that moment, I knew I was going to be hooked. I couldn't believe how easy and straightforward it felt while I was putting together my first simple web page using just HTML and CSS. It's an amazing feeling to know that you can create so many useful things just by having a vision and knowing code to make that vision come to life. All I wanted to do from that moment on was to learn more and keep learning. Working on software projects has never felt like a "a job" for me. It started as a fun hobby and has now become a real passion for me. I'm excited to keep moving forward, learning more every day and building a lifelong career in this field!</p>
             <p>In my first career, I was a personal trainer and a coach for people of all ages ranging from kids to elderly adults. I loved sports growing up and I was able to play soccer in college which was always a dream of mine. So, health, wellness and fitness will always be an important aspect of my life. I've trained and gotten to know athletes, artists, CEO's, small business owners, students, teachers, mothers, fathers, grandparents - so many people from so many different walks of life. I learned something valuable from every single one of them! That continues to be my goal now - to continue learning and evolving in the field of software development.</p>
-            <span>View my <a href="https://drive.google.com/file/d/1uYuuiVDamGtbACJoZk-aFcAXLOhm49-l/view?usp=sharing" target="_blank" class="card-link">resume</a></span>
+            <span>View my <a href="https://drive.google.com/file/d/1fVeCaiBBqmlnjtKVTtoyRdxH1T2U9rB8/view?usp=sharing" target="_blank" class="card-link">resume</a></span>
           </div>
         </div>
       </div>
@@ -101,22 +101,22 @@
           <div class="container mt-3">
             <div class="row justify-content-center">
               <ul class="skills list-style-none">
-                <li><span class="badge badge-dark">HTML</span></li>
-                <li><span class="badge badge-dark">CSS</span></li>
-                <li><span class="badge badge-dark">Javascript</span></li>
-                <li><span class="badge badge-dark">Bootstrap</span></li>
-                <li><span class="badge badge-dark">jQuery</span></li>
-              </ul>
-              <ul class="skills list-style-none">
-                <li><span class="badge badge-dark">Node.js</span></li>
-                <li><span class="badge badge-dark">Express</span></li>
+                <li><span class="badge badge-dark">Angular</span></li>
                 <li><span class="badge badge-dark">React</span></li>
+                <li><span class="badge badge-dark">NodeJS</span></li>
+                <li><span class="badge badge-dark">Express</span></li>
                 <li><span class="badge badge-dark">MongoDB</span></li>
-                <li><span class="badge badge-dark">MySQL</span></li>
               </ul>
               <ul class="skills list-style-none">
-                <li><span class="badge badge-dark">EJS</span></li>
-                <li><span class="badge badge-dark">JSX</span></li>
+                <li><span class="badge badge-dark">TypeScript</span></li>
+                <li><span class="badge badge-dark">JavaScript</span></li>
+                <li><span class="badge badge-dark">Python</span></li>
+                <li><span class="badge badge-dark">CSS</span></li>
+                <li><span class="badge badge-dark">HTML</span></li>
+              </ul>
+              <ul class="skills list-style-none">
+                <li><span class="badge badge-dark">jQuery</span></li>
+                <li><span class="badge badge-dark">SQL</span></li>
                 <li><span class="badge badge-dark">Git</span></li>
                 <li><span class="badge badge-dark">GitHub</span></li>
                 <li><span class="badge badge-dark">Heroku</span></li>
