update projects links and descriptions for inactive urls

--- a/index.html
+++ b/index.html
@@ -199,25 +199,10 @@
             <p>Bellevue University, WEB-330, GitHub Repo</p>
           </div>
         </div>
-        <!-- Gryffindor JS Trivia -->
-        <div class="carousel-item">
-          <div class="carousel-caption">
-            <a href="https://kevinjones.engineer/house-of-gryffindor/index.html" target="_blank">
-              <h3>JavaScript Trivia Game</h3>
-              <div class="img-container m-2">
-                <img src="imgs/gryffindor-js-quiz.png" alt="Gryffindor JavaScript Quiz image">
-                <div class="overlay">
-                  <span>HTML, CSS, JavaScript - Knockout.js (MVVM), Group Collaboration via GitHub</span>
-                </div>
-              </div>
-            </a>
-            <p>A JavaScript Quiz with a Gryffindor Theme from Harry Potter!</p>
-          </div>
-        </div>
         <!-- EMS -->
         <div class="carousel-item">
           <div class="carousel-caption">
-            <a href="https://watson-ems-app.herokuapp.com/" target="_blank">
+            <a href="https://bu-mw-ems-6ffe27dc41e4.herokuapp.com/" target="_blank">
               <h3>Employee Management System</h3>
               <div class="img-container m-2">
                 <img src="imgs/ems-app.png" alt="EMS home page image">
@@ -227,7 +212,7 @@
               </div>
             </a>
             <p>A simple Employee Management System that stores employee data to view.</p>
-            <a href="https://github.com/watsonm19/web-340/tree/main/ems" target="_blank">EMS GitHub Repository</a>
+            <a href="https://github.com/watsonm19/employee-management-system/tree/main" target="_blank">EMS GitHub Repository</a>
           </div>
         </div>
         <!-- Diagrams -->
@@ -270,7 +255,7 @@
         <!-- API Gateway -->
         <div class="carousel-item">
           <div class="carousel-caption">
-            <a href="https://watson-api-gateway.herokuapp.com/" target="_blank">
+            <a href="#" target="_blank">
               <h3>API Gateway</h3>
               <div class="img-container m-2">
                 <img src="imgs/api-gateway-app.png" alt="API Gateway home page image">
@@ -279,7 +264,8 @@
                 </div>
               </div>
             </a>
-            <p>An API Gateway system with basic routing. Created in WEB 420 at Bellevue University.</p>
+            <p>An API Gateway system with basic routing. Created in WEB 420 at Bellevue University.<br />
+              **IMPORTANT: <span class="text-danger">Site no longer active.</span> View Repo below.</p>
             <a href="https://github.com/watsonm19/web-420/tree/main/api-gateway" target="_blank">API Gateway GitHub Repository</a>
           </div>
         </div>
@@ -359,7 +345,7 @@
         <!-- Bob's Computer Repair Shop Web App -->
         <div class="carousel-item">
           <div class="carousel-caption">
-            <a href="https://hufflepuff-bcrs.herokuapp.com/#/" target="_blank">
+            <a href="#" target="_blank">
               <h3>Bob's Computer Repair Shop Web App</h3>
               <div class="img-container m-2">
                 <img src="imgs/bcrs-img.png" alt="Bob's Computer Repair Shop web app - Service Repair page image">
@@ -370,7 +356,7 @@
             </a>
             <p>
               A MEAN Stack production-level web application that creates and stores users, invoices, security questions, and roles with a Hufflepuff theme.<br />
-              **IMPORTANT: use the following credential to login or register your own! <span class="text-danger">Username: test77, Password: password77</span>
+              **IMPORTANT: <span class="text-danger">Site no longer active.</span> View Repo below.
             </p>
             <a href="https://github.com/adamluna/BobsComputerRepair" target="_blank">BCRS Repository</a>
           </div>
