fixed grammatical errors

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               </div>
             </a>
             <p>An API Gateway system with basic routing. Created in WEB 420 at Bellevue University.<br />
-              **IMPORTANT: <span class="text-danger">Site no longer active.</span> View Repo below.</p>
+              **IMPORTANT: <span class="text-danger">Site no longer active.</span> View repo below.</p>
             <a href="https://github.com/watsonm19/web-420/tree/main/api-gateway" target="_blank">API Gateway GitHub Repository</a>
           </div>
         </div>
@@ -356,7 +356,7 @@
             </a>
             <p>
               A MEAN Stack production-level web application that creates and stores users, invoices, security questions, and roles with a Hufflepuff theme.<br />
-              **IMPORTANT: <span class="text-danger">Site no longer active.</span> View Repo below.
+              **IMPORTANT: <span class="text-danger">Site no longer active.</span> View repo below.
             </p>
             <a href="https://github.com/adamluna/BobsComputerRepair" target="_blank">BCRS Repository</a>
           </div>
