added gh repo link for portfolio site

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
               <span>Photo by <a href="https://unsplash.com/@visualdesign_inspiration?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Visual Design</a> on <a href="https://unsplash.com/s/photos/wireframe?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
             </figcaption>
             <p>The wireframes for this portfolio page! Made with NinjaMock.</p>
+            <a href="https://github.com/watsonm19/watsonm19.github.io" target="_blank">Web Portfolio GitHub Repository</a>
           </div>
         </div>
         <!-- WEB 330 Repo -->
