--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <!-- API Gateway -->
         <div class="carousel-item">
           <div class="carousel-caption">
-            <a href="#" target="_blank">
+            <a href="#">
               <h3>API Gateway</h3>
               <div class="img-container m-2">
                 <img src="imgs/api-gateway-app.png" alt="API Gateway home page image">
@@ -346,7 +346,7 @@
         <!-- Bob's Computer Repair Shop Web App -->
         <div class="carousel-item">
           <div class="carousel-caption">
-            <a href="#" target="_blank">
+            <a href="#">
               <h3>Bob's Computer Repair Shop Web App</h3>
               <div class="img-container m-2">
                 <img src="imgs/bcrs-img.png" alt="Bob's Computer Repair Shop web app - Service Repair page image">
