updated project overlay skills

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <div class="img-container m-2">
                 <img src="imgs/ems-app.png" alt="EMS home page image">
                 <div class="overlay">
-                  <span>HTML, CSS, JavaScript, Bootstrap, Node.js, Express, MongoDB, other NPM dependencies, deployed on Heroku</span>
+                  <span>Node.js, Express, MongoDB, JavaScript, Bootstrap, deployed on Heroku</span>
                 </div>
               </div>
             </a>
@@ -261,7 +261,7 @@
               <div class="img-container m-2">
                 <img src="imgs/api-gateway-app.png" alt="API Gateway home page image">
                 <div class="overlay">
-                  <span>Node.js, Express, MongoDB, other NPM dependencies, API Routing, SOAP UI Testing, Microservices, deployed on Heroku</span>
+                  <span>Node.js, Express, MongoDB, API Routing, SOAP UI Testing, Microservices, deployed on Heroku</span>
                 </div>
               </div>
             </a>
@@ -298,7 +298,7 @@
               <div class="img-container m-2">
                 <img src="imgs/composer-app.png" alt="ComposerApp home page image">
                 <div class="overlay">
-                  <span>Angular, TypeScript, HTML, CSS, Bootstrap, deployed using ghpages</span>
+                  <span>Angular, Bootstrap, deployed using ghpages</span>
                 </div>
               </div>
             </a>
@@ -314,7 +314,7 @@
               <div class="img-container m-2">
                 <img src="imgs/gpa-calculator-app.png" alt="GPA Calculator App main page image">
                 <div class="overlay">
-                  <span>Angular, TypeScript, HTML, CSS, Angular Material, deployed using ghpages</span>
+                  <span>Angular, deployed using ghpages</span>
                 </div>
               </div>
             </a>
@@ -333,7 +333,7 @@
               <div class="img-container m-2">
                 <img src="imgs/in-n-out-books.png" alt="In-N-Out-Books App main page image">
                 <div class="overlay">
-                  <span>Angular, TypeScript, HTML, CSS, Angular Material, deployed using ghpages</span>
+                  <span>Angular, deployed using ghpages</span>
                 </div>
               </div>
             </a>
@@ -351,7 +351,7 @@
               <div class="img-container m-2">
                 <img src="imgs/bcrs-img.png" alt="Bob's Computer Repair Shop web app - Service Repair page image">
                 <div class="overlay">
-                  <span>MEAN Stack, HTML, CSS, JavaScript, Angular Material, deployed on Heroku</span>
+                  <span>MEAN Stack, deployed on Heroku</span>
                 </div>
               </div>
             </a>
