added WeatherApp to projects

--- a/index.html
+++ b/index.html
@@ -362,6 +362,24 @@
             <a href="https://github.com/adamluna/BobsComputerRepair" target="_blank">BCRS Repository</a>
           </div>
         </div>
+        <!-- WeatherApp -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://watsonm19.github.io/WeatherApp" target="_blank">
+              <h3>WeatherApp</h3>
+              <div class="img-container m-2">
+                <img src="imgs/WeatherApp.png" alt="In-N-Out-Books App main page image">
+                <div class="overlay">
+                  <span>Angular, deployed using ghpages</span>
+                </div>
+              </div>
+            </a>
+            <p>
+              An Angular app that displays the current weather details of any chosen city. Utilizes RapidAPI's 'Weather by API-Ninjas' to retrieve weather data.
+            </p>
+            <a href="https://github.com/watsonm19/WeatherApp" target="_blank">WeatherApp GitHub Repository</a>
+          </div>
+        </div>
       <!-- end carousal -->
       </div>
       <!-- Carousal Controls -->
