added link to online BU diploma

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item card-dark">Graduated: January 2022</li>
-              <li class="list-group-item card-dark">Bachelor of Science<br />Web Development</li>
+              <a href="https://www.parchment.com/u/award/7eeff71f6b103e7ee4b0b96f95dd72f2">
+                <li class="list-group-item card-dark">Bachelor of Science<br />Web Development</li>
+              </a>
             </ul>
           </div>
         </div>
@@ -127,7 +129,7 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
+  <!-- PROJECTS SECTION -->
   <section id="projects" class="mt-5">
     <h2 class="text-center p-5">PROJECTS</h2>
     <div id="carouselControls" class="carousel slide" data-ride="carousel">
