added link to online BU diploma (updated)

--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
         </div>
       </div>
       <div class="row">
+        <!-- EDUCATION SECTION -->
         <div id="education" class="col">
           <h3 class="text-center">education</h3>
           <br>
+          <!-- Portland Community College Card -->
           <div class="card card-dark" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Portland Community College</h5>
@@ -85,18 +87,19 @@
             </ul>
           </div>
           <br>
-          <div class="card card-dark" style="width: 20rem;">
-            <div class="card-body">
-              <h5 class="card-title">Bellevue University</h5>
-              <p class="card-text">Bellevue, NE</p>
+          <!-- Bellevue University Card -->
+          <a href="https://www.parchment.com/u/award/7eeff71f6b103e7ee4b0b96f95dd72f2">
+            <div class="card card-dark" style="width: 20rem;">
+              <div class="card-body">
+                <h5 class="card-title">Bellevue University</h5>
+                <p class="card-text">Bellevue, NE</p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item card-dark">Graduated: January 2022</li>
+                  <li class="list-group-item card-dark">Bachelor of Science<br />Web Development</li>
+              </ul>
             </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item card-dark">Graduated: January 2022</li>
-              <a href="https://www.parchment.com/u/award/7eeff71f6b103e7ee4b0b96f95dd72f2">
-                <li class="list-group-item card-dark">Bachelor of Science<br />Web Development</li>
-              </a>
-            </ul>
-          </div>
+          </a>
         </div>
         <div id="skills-section" class="col">
           <h3 class="text-center">skills</h3>
