added code comments & updated contact form email address

--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
     </div>
   </nav>
 
-  <!-- About Section -->
+  <!-- ABOUT SECTION -->
   <section id="about" class="mt-5">
     <h2 class="text-center p-5">ABOUT</h2>
     <div class="container-fluid p-5">
       <div class="row mb-5 justify-content-center">
+        <!-- Profile image -->
         <figure class="col text-center">
           <img id="profile-img" src="imgs/mjw-profile-min.jpg" alt="Mark Watson head-shot">
         </figure>
+        <!-- About me text -->
         <div id="about-me-text" class="col">
           <div class="container">
             <h5>"I want to make things that make an impact."</h5>
@@ -71,7 +73,7 @@
         </div>
       </div>
       <div class="row">
-        <!-- EDUCATION SECTION -->
+        <!-- EDUCATION -->
         <div id="education" class="col">
           <h3 class="text-center">education</h3>
           <br>
@@ -101,6 +103,7 @@
             </div>
           </a>
         </div>
+        <!-- Skills -->
         <div id="skills-section" class="col">
           <h3 class="text-center">skills</h3>
           <div class="container mt-3">
@@ -408,7 +411,7 @@
       <h6>I would love to join your team!</h6>
     </div>
     <div class="container">
-      <form action="mailto:watsonpt7@gmail.com" method="POST" enctype="multipart/form-data" name="email-form">
+      <form action="mailto:watsonm.dev@gmail.com" method="POST" enctype="multipart/form-data" name="email-form">
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name" name="name">
@@ -423,7 +426,7 @@
         </div>
         <div>
           <button type="submit" class="btn btn-primary m-2">Submit</button>
-          <a href="mailto:watsonpt7@gmail.com">Click here if not able to submit</a>
+          <a href="mailto:watsonm.dev@gmail.com">Click here if not able to submit</a>
         </div>
       </form>
     </div>
