added formspree API integration

--- a/index.html
+++ b/index.html
@@ -411,22 +411,22 @@
       <h6>I would love to join your team!</h6>
     </div>
     <div class="container">
-      <form action="mailto:watsonm.dev@gmail.com" method="POST" enctype="multipart/form-data" name="email-form">
+      <form action="https://formspree.io/f/mbjvgagn" method="POST" enctype="multipart/form-data" name="email-form">
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="text" class="form-control" id="name" name="name">
+          <input type="text" class="form-control" id="name" name="name" required>
         </div>
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" name="email">
+          <input type="email" class="form-control" id="email" name="email" required>
         </div>
         <div class="form-group">
           <label for="message">Message</label>
-          <textarea class="form-control" id="message" name="message" rows="4"></textarea>
+          <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
         </div>
         <div>
           <button type="submit" class="btn btn-primary m-2">Submit</button>
-          <a href="mailto:watsonm.dev@gmail.com">Click here if not able to submit</a>
+          <a href="mailto:watsonm.dev@gmail.com">Click here if unable to submit</a>
         </div>
       </form>
     </div>
@@ -436,7 +436,7 @@
 
   <!-- Footer -->
   <footer class="p-4">
-    <p class="text-center">Mark Watson's Portfolio | 2021</p>
+    <p class="text-center">Mark Watson's Portfolio | 2023</p>
   </footer>
 
   <!-- Scripts and Libraries -->
